--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <script>var exports={};</script>
     <script type="module" src="./index.js"></script>
-    <script src="./node_modules/animejs/lib/anime.min.js"></script>
+    <script src="./anime.min.js"></script>
     <script> 
     const difficultyList = document.querySelectorAll(".difficulty__name");
     difficultyList.forEach((el)=> {
