--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         el.classList = "active";
         })
     })
+        document.getElementById("mus").volume = 0.2;
     </script>
 </body>
 </html>
