--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button class="btn-neon" id="btn_start"><span>Start</span><span>New Game</span></button>
             <nav class="difficulty">
                 <ul  class="difficulty__list">
-                    <button class="btn-neon" id="btn_dif_easy"><span class="btn-neon_inner color-pink"></span>kid<span class="btn-neon_inner color-pink">Easy</span></button>
+                    <button class="btn-neon" id="btn_dif_easy"><span class="btn-neon_inner color-pink">kid</span><span class="btn-neon_inner color-pink">Easy</span></button>
                     <button class="btn-neon" id="btn_dif_medium"><span class="btn-neon_inner">normal</span><span class="btn-neon_inner">Medium</span></button>
                     <button class="btn-neon" id="btn_dif_hard"><span class="btn-neon_inner">Real man</span><span class="btn-neon_inner">Hard</span></button>
                 </ul>
